objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>HCSC_State__c</fullName>
        <formula>Text(Product2.HCSC_State__c)</formula>
        <label>HCSC State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Billing__c</fullName>
        <description>Store the billing option for each Product.</description>
        <label>New Billing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_reference_only__c</fullName>
        <description>store Pricing options for Products. Each option are separated by delimiter &quot;||&quot;</description>
        <label>Pricing_reference_only</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Service_Detail__c</fullName>
        <description>Store Product service detail options for Products. Each option is separated by the delimiter &quot;||&quot;</description>
        <label>Product_Service_Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>